--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,7 +1,13 @@
-<div id="top_float_left">
-  <%= link_to(image_tag('add.png',:title => [t "products.t_add_new"]), new_product_path) %><%= link_to [t "products.t_add_new"], new_product_path %>
+<div id="sidebar_left">
+  <%= render 'layouts/quick_links_sidebar' %>
+  <ul>
+    <li class="create">
+      <%= link_to [t "products.t_add_new"], new_product_path %>
+    </li>
+  </ul>
   </div>
-<% form_tag products_path, :method => 'get' do %>
+<div id="center_col">
+  <% form_tag products_path, :method => 'get' do %>
    <p><%= t "products.search"  %>
      <%=  text_field_tag :search_products, params[:search_products]  %>
      <%= submit_tag (t "global.submit"), :name => nil %>
@@ -49,5 +55,4 @@
   </tr>
 <% end %>
 </table>
-
-<br />
+</div>
