--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,8 +1,12 @@
-<div id="top_float_left">
-  <h1><%= t "global.quick_links" %></h1>
-  <%= link_to(image_tag('exit.png', :title => [t "global.close"]), products_path) %>&nbsp;<%= link_to([t "global.close"], products_path) %>
+<div id="sidebar_left">
+ <%= render 'layouts/quick_links_sidebar' %>
+  <ul>
+    <li class="exit">
+      <%= link_to([t "global.close"], products_path) %>
+    </li>
+  </ul>
 </div>
-<div class="centered">
+<div id="center_col">
   <div id="ddtabs1" class="basictab" >
   <ul>
   <li><a href="#<%= t "products.tab_menu_basic_name"  %>" rel="sc1"><%= (t "products.tab_menu_basic") %></a></li>
