CSS and layout updates. More to come.....

--- a/app/views/users/register.html.erb
+++ b/app/views/users/register.html.erb
@@ -1,4 +1,4 @@
-<div class="centered">
+<div class="center_col">
   <div id="ddtabs1" class="basictab">
     <ul>
       <li><a href="#<%= t "products.tab_menu_basic_name" %>" rel="sc1"><%= (t "products.tab_menu_basic") %></a></li>
@@ -32,3 +32,4 @@
     </div>
   </div>
 </div>
+
