--- a/app/views/work_orders/index.html.erb
+++ b/app/views/work_orders/index.html.erb
@@ -1,4 +1,4 @@
-<div id="sidebar_left">
+<div class="sidebar_left">
   <%= render 'layouts/quick_links_sidebar' %>
 
   <ul>
@@ -10,7 +10,7 @@
     <li class="back"><%= link_to (t "global.back"), :back %></li>
   </ul>
 </div>
-<div id="center_col">
+<div class="center_col">
   <div id="ddtabs1" class="basictab">
     <ul>
       <li><a href="#new" rel="tab1"><%= t "workorder.tab_menu_new" %>&nbsp;(<% if @new_work_orders.count > 0 %><span style="color:red;"><%= @new_work_orders.count %></span><% else %><%= @new_work_orders.count %><% end %>)</a></li>
