--- a/app/views/work_orders/show.html.erb
+++ b/app/views/work_orders/show.html.erb
@@ -1,15 +1,26 @@
-<div id="top_float_left">
-<% if can? :destroy, WorkOrder %>
-<%= link_to(image_tag("delete.png", :title=> (t "global.delete"),:align => "bottom", :hspace => "2"), :confirm => 'Are you sure?',  :action => :destroy )%><%= link_to (t "global.delete"), work_order_path, :confirm => 'Are you sure?', :method => :delete %>&nbsp;&nbsp;
-<% end %>
-<% if can? :edit, WorkOrder %>
-<%= link_to(image_tag("edit.png", :title=> (t "global.edit"),:align => "bottom", :hspace => "2"), edit_work_order_path)%><%= link_to (t "global.edit"), edit_work_order_path %>&nbsp;&nbsp;
-<% end %>
-  <%= link_to(image_tag('printer.png', :title => (t "global.print"),:align => "bottom", :hspace => "2"), work_order_path(@work_order.id,:format => 'pdf'))%><%= link_to (t "global.print"), work_order_path(@work_order.id,:format => 'pdf') %>&nbsp;&nbsp;
-  <%= link_to(image_tag("exit.png", :title=> (t "global.exit"), :align => "bottom", :hspace => "2"), work_orders_path)%><%= link_to (t "global.exit"), work_orders_path %>
+<div class="sidebar_left">
+  <%= render 'layouts/quick_links_sidebar' %>
+  <ul>
+    <li class="delete">
+        <% if can? :destroy, WorkOrder %>
+            <%= link_to (t "global.delete"), work_order_path, :confirm => 'Are you sure?', :method => :delete %>&nbsp;&nbsp;
+        <% end %>
+    </li>
+    <li class="edit">
+      <% if can? :edit, WorkOrder %>
+        <%= link_to (t "global.edit"), edit_work_order_path %>&nbsp;&nbsp;
+      <% end %>
+    </li>
+    <li class="print">
+       <%= link_to (t "global.print"), work_order_path(@work_order.id,:format => 'pdf') %>
+    </li>
+    <li class="exit">
+      <%= link_to (t "global.exit"), work_orders_path %>
+    </li>
+  </ul>
 </div>
-<br>
-<div id="show_view">
+<div class="center_col">
+  <div id="show_view">
   <table>
     <tr>
       <td class="tbl_labels" >
@@ -34,7 +45,7 @@
     <% end %>
     <% end %>
     </td>
-  </tr>  
+  </tr>
     <tr>
           <td class="tbl_labels" >
             <strong><%= t "workorder.priority" %>:</strong>
@@ -85,4 +96,5 @@
   </table>
     <br>
   </fieldset>
+</div>
 </div>
