Various Things. Mainly CSS designing.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,7 +55,7 @@ $(function() {
         </p>
     <%- end -%>
 
-    <div id="page_title">
+    <div id="page_title" class="text_shadow">
       <% if logged_in?  %><h1><%= @title || "" %></h1>
       <% else %>
       &nbsp;
