--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,55 +1,72 @@
 <% if logged_in? %>
-<div id="sidebar_left">
-  <%= render 'layouts/quick_links_sidebar' %>
-  <ul>
-    <li class="exit">
-      <%= link_to (t "global.exit"), users_path %>
-    </li>
-  </ul>
-</div>
+    <div id="sidebar_left">
+      <%= module_header() %>
+      <div class="module">
+        <ul>
+          <li class="exit">
+            <%= link_to (t "global.exit"), users_path %>
+          </li>
+        </ul>
+      </div>
+    </div>
 <% end %>
-<div class="centered">
-  <%= simple_form_for(@user) do |f| %>
-      <%= f.error_notification %>
-        <div id="two_columns" class="first float_left">
+<div id="center_col">
+  <div id="ddtabs1" class="basictab">
+    <ul>
+      <li><a href="#<%= t "products.tab_menu_basic_name" %>" rel="required"><%= (t "products.tab_menu_basic") %></a>
+      </li>
+      <li><a href="#<%= t "users.tab.contact_info" %>" rel="contact"><%= (t "users.tab.contact_info") %></a></li>
+      <li><a href="#<%= t "users.tab.attributes" %>" rel="attributes"><%= (t "users.tab.attributes") %></a></li>
+    </ul>
+  </div>
+  <div class="tabcontainer">
+    <div id="required" class="tabcontent">
+      <%= simple_form_for(@user) do |f| %>
+          <%= f.error_notification %>
           <%= f.input :name, :hint =>(t "user.name_eg"), :label =>(t "user.name") %>
           <%= f.input :username, :label => (t "user.username") %>
           <%= f.input :password, :required => true %>
           <%= f.input :password_confirmation, :label => (t "user.password_confirmation"), :required => true %>
           <%= f.input :email, :label => (t "global.email") %>
-
-          <%= f.input :address, :input_html => {:rows => 4, :cols => 30}, :label => (t "global.address") %>
-          <%= f.input :city, :label => (t "global.city") %>
-          <%= f.input :zip, :label =>(t "global.zip") %>
-          <%= f.input :state, :label => (t "global.state") %>
-</div>
-<div class="clear"></div>
-<div id="two_columns" class="float_right">
-   <%= f.input :phone, :input_html => {:size => 30}, :label => (t "global.phone") %>
-          <%= f.input :mobile, :input_html => {:size => 30}, :label => (t "global.mobile") %>
-          <%= f.input :fax, :input_html => {:size => 30}, :label => (t "global.fax") %>
+          <%= f.input :phone, :input_html => {:size => 30}, :label => (t "global.phone") %>
           <% if current_user == nil %>
               <%= hidden_field_tag "user[created_by]", "SELF" %>
               <%= hidden_field_tag "user[client]", 1 %>
           <% else %>
               <%= hidden_field_tag "user[created_by]", current_user.username %>
           <% end %>
-</div>
-      <% if can? :manage, :all %>
-              <% if current_user.employee == true %>
-                  <%= f.input :client, :as => :radio, :input_html => {:value => "1", :value => "1"}, :label =>(t "user.client") %>
-                  <%= f.input :employee, :as => :radio, :input_html => {:value => "1", :value => "1"}, :label =>(t "user.employed") %>
-                  <%= f.input :workorder_assignability, :as => :radio, :input_html => {:value => "1", :value => "1"}, :label =>(t "user.assignable") %>
+          <div class="center">
+            <%= f.button :submit %>
+          </div>
+    </div>
+    <div id="contact" class="tabcontent simple_form">
+            <%= f.input :address, :input_html => {:rows => 4, :cols => 30}, :label => (t "global.address") %>
+            <%= f.input :city, :label => (t "global.city") %>
+            <%= f.input :zip, :label =>(t "global.zip") %>
+            <%= f.input :state, :label => (t "global.state") %>
+
+            <%= f.input :mobile, :input_html => {:size => 30}, :label => (t "global.mobile") %>
+            <%= f.input :fax, :input_html => {:size => 30}, :label => (t "global.fax") %>
+
+            <div class="center">
+              <%= f.button :submit %>
+            </div>
+    </div>
+            <div id="attributes" class="tabcontent simple_form">
+              <% if can? :manage, :all %>
+                  <% if current_user.employee == true %>
+                      <%= f.input :client, :as => :radio, :checked => true, :label =>(t "user.client") %>
+                      <%= f.input :employee, :as => :radio, :checked => [true, false], :label =>(t "user.employed") %>
+                      <%= f.input :workorder_assignability, :as => :radio, :checked => [true, false], :label =>(t "user.assignable") %>
+                  <% end %>
+                  <label class="string required" for="user_role"><abbr title="Required">*</abbr>Role</label>
+                  <%= f.collection_select :role, User::ROLES, :to_s, :humanize, :include_blank => true %>
               <% end %>
-              <label class="string required" for="user_role"><abbr title="Required">*</abbr>Role</label>
-              <%= f.collection_select :role, User::ROLES, :to_s, :humanize, :include_blank => true%>
 
-
-
+              <div class="center">
+                <%= f.button :submit %>
+              </div>
+            </div>
       <% end %>
-    <div class="clear"></div>
-    <div class="center">
-      <%= f.button :submit %>
-    </div>
-<% end %>
-    </div>
+      </div>
+</div>
