--- a/app/views/work_orders/show.html.erb
+++ b/app/views/work_orders/show.html.erb
@@ -1,26 +1,17 @@
-<div class="sidebar_left">
-  <%= render 'layouts/quick_links_sidebar' %>
-  <ul>
-    <li class="delete">
-        <% if can? :destroy, WorkOrder %>
-            <%= link_to (t "global.delete"), work_order_path, :confirm => 'Are you sure?', :method => :delete %>&nbsp;&nbsp;
-        <% end %>
-    </li>
-    <li class="edit">
-      <% if can? :edit, WorkOrder %>
-        <%= link_to (t "global.edit"), edit_work_order_path %>&nbsp;&nbsp;
-      <% end %>
-    </li>
-    <li class="print">
-       <%= link_to (t "global.print"), work_order_path(@work_order.id,:format => 'pdf') %>
-    </li>
-    <li class="exit">
-      <%= link_to (t "global.exit"), work_orders_path %>
-    </li>
-  </ul>
+<div id="sidebar_left">
+  <%= module_header %>
+  <div class="module">
+    <% if can? :destroy, WorkOrder %>
+<%= link_to (t "global.delete"), work_order_path, :class => "delete", :confirm => 'Are you sure?', :method => :delete %>
+<% end %>
+<% if can? :edit, WorkOrder %>
+<%= link_to (t "global.edit"), edit_work_order_path, :class => "edit" %>
+<% end %>
+ <%= link_to (t "global.print"), work_order_path(@work_order.id,:format => 'pdf'), :class => "printer" %>
+ <%= link_to (t "global.exit"), work_orders_path, :class => "exit" %>
 </div>
-<div class="center_col">
-  <div id="show_view">
+  </div>
+<div id="center_col">
   <table>
     <tr>
       <td class="tbl_labels" >
@@ -45,7 +36,7 @@
     <% end %>
     <% end %>
     </td>
-  </tr>
+  </tr>  
     <tr>
           <td class="tbl_labels" >
             <strong><%= t "workorder.priority" %>:</strong>
@@ -96,5 +87,4 @@
   </table>
     <br>
   </fieldset>
-</div>
 </div>
