--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,51 +1,52 @@
 /*Layout*/
-body {width:100%;margin:0.9px;padding:0;border:0;vertical-align:baseline; background-color: white;font-family: Verdana, Helvetica, Arial,serif;font-size: 11px;}
+body {min-width:960px;height:auto;margin:0.9px;padding:0;border:0;vertical-align:baseline;}
 #header {text-align:center; padding-bottom:2px;}
-#container {padding: 5px 20px 5px 20px;text-align:left;}
+#container {padding: 5px 20px 5px 20px;}
 #conatiner a {color: #0000FF;}
 #yield {margin: 0 auto;}
-#yield h1 {display:inline-block;padding-right:20px;font-size:16px;color: #999999;}
-.center_col {margin-left:20em;margin-right:20em; padding:0 15px 15px 15px;}
+#center_col {margin-left:18em;margin-right:18em; padding:0 15px 15px 15px;}
 #user_info_menu { font-size:10px; float:right;color: white;padding-top: 6px;padding-right: 13px;}
-.sidebar_left, .sidebar_right {border:1px solid silver;width:17em;padding:5px;line-height:1.5em;height:auto;display:block;}
-.sidebar_left {float:left;}
-.sidebar_left h1 {display:block;font-size:12px;padding-right:0;text-align:center;font-weight:bold;}
-.sidebar_left a {color:#000000;text-decoration:none}
-.sidebar_left ul {margin-left:-40px;display:list-item;list-style-type:none;}
-.sidebar_left li {font-size:1.2em;line-height:1.5em;}
-.sidebar_left li:hover {background-color:#a9a9a9;font-weight:bold;padding-left:25px;-moz-border-radius:10px;-webkit-border-radius:10px}
-.sidebar_right {float:right;}
-.sidebar_right h1 {display:block;font-size:12px;padding-right:0;text-align:center;font-weight:bold;}
-.sidebar_right a {color:#000000;text-decoration:none}
-.sidebar_right ul {margin-left:-40px;display:list-item;list-style-type:none;}
-.sidebar_right li {font-size:1.2em;line-height:1.5em;}
-.sidebar_right li:hover {background-color:#a9a9a9;font-weight:bold;padding-left:25px;-moz-border-radius:10px;-webkit-border-radius:10px}
-.two_columns {width:50%;}
+#sidebar_left, #sidebar_right {width:17em;line-height:1.5em;height:auto;display:block;}
+#sidebar_left {float:left;}
+#sidebar_right {float:right;}
+.module_header {margin:0}
 .first {margin-right:15px;padding-right:15px;}
 .float_right{float:right;display:inline-block;}
 .float_left{float:left;display:inline-block;}
 
 
 /*Typography*/
+body {font:13px/1.5 "Segoe UI",Calibri,"Myriad Pro",Myriad,"Trebuchet MS",Helvetica,Arial,sans-serif; }
+#container, #footer, body {background:url(/images/content.jpg) top left repeat;}
+#container {text-align:left;}
 #page_title {margin-left:160px;margin-right:160px;text-align:center;}
+#sidebar_left h2, #sidebar_right h2 {display:block;font-size:12px;padding-right:0;text-align:center;font-weight:bold;}
 a img {border: none;}
+h1 {font-size:25px;color:#ff9900;}
+h2 {font:15px/1.5 "Segoe UI",Calibri,"Myriad Pro",Myriad,"Trebuchet MS",Helvetica,Arial,sans-serif; ;color: #fffefe;}
+h3 {}
 h6 {width: 95%;font-family: Verdana, Helvetica, Arial,fantasy;font-size: 12px;}
-.module {background-color:#ededff;border:3px solid black}
-.module_title {background-color:#820a0a;color:#ffffff;text-align:center;text-transform:uppercase;}
+.module_header {text-align:center;text-transform:uppercase;font-family:impact,fantasy;font-size:20px;padding:5px;color:#fffefe;background-color:#707070;border-radius:10px 10px 0 0;border:1px 1px 0 1px solid silver;}
+.module {background-color:#c3c2bf;border-radius:0 0 10px 10px;padding:0 5px 5px 5px;overflow:hidden;text-align:left !important;margin-bottom:15px;}
+    .module h2 {background-color:#820a0a;color:#ffffff !important;text-align:center;text-transform:uppercase;}
+    .module a {color:#000000;text-decoration:none}
+    .module ul {margin-left:-40px;display:list-item;list-style-type:none;}
+    .module li {font-size:1.2em;line-height:1.5em;}
+    .module li:hover {background-color:#a9a9a9;font-weight:bold;padding-left:25px;-moz-border-radius:10px;-webkit-border-radius:10px}
+
 .clear {clear:both;height: 0;overflow: hidden;margin-bottom:0.5em;padding-top:20px;}
 .hide {display:none;}
 .text_left{text-align:left;}
 .text_right{text-align:right;}
 .light_fill {background:#ceeeda}
-.create, .delete, .exit, .home, .back, .edit,.print {padding: 4px 30px 4px 25px;}
+.create, .delete, .exit, .home, .back {padding: 4px 30px 4px 25px;}
 .create {background: url(/images/add.png) 8px 5px no-repeat;}
 .delete {background: url(/images/delete.png) 8px 5px no-repeat;}
 .exit {background: url(/images/exit.png) 8px 5px no-repeat;}
 .home {background: url(/images/home.gif) 8px 5px no-repeat;}
 .back {background: url(/images/back.png) 8px 5px no-repeat;}
-.edit {background: url(/images/edit.png) 8px 5px no-repeat;}
-.print {background: url(/images/printer.png) 8px 5px no-repeat;}
 .border {background-color:silver; -moz-border-radius:10px;-moz-box-shadow:#6495ed;-webkit-border-radius:10px;border-radius:10px; padding:5px}
+.text_shadow {text-shadow: 0 1px 2px #333;}
 #user_info_menu a {color: white;}
 
 /*Flash Notices*/
@@ -58,47 +59,49 @@ h6 {width: 95%;font-family: Verdana, Helvetica, Arial,fantasy;font-size: 12px;}
 #menu_tabs { margin: 0 auto;}
 
 #menu{width:100%;height:30px;background-color:black;font: bold 10px Verdana;padding: 0;}
-#menu ul{margin: 0;padding: 0;list-style-type: none;}
-#menu li{float: left;position: relative;display: inline-block;z-index: 2;}
-#menu ul li a{display: inline-block;background:black;color: white; padding: 8px 10px;text-decoration:none;border-bottom:2px solid black;}
-#menu ul li ul li a{width:160px;}/*width of sub menus*/
-#menu ul li:hover ul {visibility: visible;-moz-border-radius:10px;-webkit-border-radius:10px}
-#menu ul ul {position: absolute; visibility: hidden }
-#menu ul li a.selected {background:#333333;border-bottom:2px solid red}
-#menu li a.selected:hover{color:white;}
-#menu ul li:hover ul li a:hover {background:#333333;}
-#menu li a:hover {color:white;background-color:#333333;}
-#menu ul:hover {background:#fff;}
+    #menu ul{margin: 0;padding: 0;list-style-type: none;}
+    #menu li{float: left;position: relative;display: inline-block;z-index: 2;}
+    #menu ul li a{display: inline-block;background:black;color: white; padding: 8px 10px;text-decoration:none;border-bottom:2px solid black;}
+    #menu ul li ul li a{width:160px;}/*width of sub menus*/
+    #menu ul li:hover ul {visibility: visible;-moz-border-radius:10px;-webkit-border-radius:10px}
+    #menu ul ul {position: absolute; visibility: hidden }
+    #menu ul li a.selected {background:#333333;border-bottom:2px solid red}
+    #menu li a.selected:hover{color:white;}
+    #menu ul li:hover ul li a:hover {background:#333333;}
+    #menu li a:hover {color:white;background-color:#333333;}
+    #menu ul:hover {background:#fff;}
 
 
 /*SimpleForm Styles*/
 input.title {font-size:1.5em;}
 .simple_form {margin-bottom:0;}
-.simple_form div.input, div.textarea, div.textile {font-size:100%; margin-bottom: 5px;width:100%;clear:left; display:inline-block;}
-.simple_form label {float:left;text-align:right; margin: 2px 10px;display:block;width:auto;min-width:33%}
-.simple_form input[type='submit'] {text-transform:capitalize;display:inline;}
-.simple_form div.boolean {text-transform:none;}
-.simple_form button {position:relative;}
-.simple_form label.collection_radio {margin-right: 10px;vertical-align:-2px; margin-left:2px; display:table-row;text-align:left;float:none;width:0;}
-.error_notification {padding: 4px 30px 4px 30px;background: url(/images/exclamation.png) 8px 5px no-repeat #FCC;border: solid 2px #C66;}
-.simple_form .error {clear:left;color: #ff3333;display:block;margin-left:33%;font-size:10px;padding-left:20px;font-style:italic;font-weight:bold;text-transform:capitalize;}
-.simple_form .hint {clear: left;margin-left: 33%;padding-left:20px;color: #555;display: block;font-style: italic;}
-input.radio { vertical-align: -3px; }
-input.check_boxes { margin-left: 3px; vertical-align: -3px;}
-label.collection_check_boxes { margin: 0; vertical-align: -2px; margin-left:2px;}
-input.required, input.optional, textarea.optional, textarea.required, {display:block;}
-input.required, textarea.required, .select_required {border: 2px solid #8b0000; background-color:#ffffcc;font-size:inherit;}
-.select_required {padding:0.4em;}
+    .simple_form div.input, div.textarea, div.textile {font-size:100%; margin-bottom: 5px;width:100%;clear:left; display:inline-block;}
+    .simple_form label {float:left;text-align:right; margin: 2px 10px;display:block;width:auto;min-width:33%}
+    .simple_form input[type='submit'] {text-transform:capitalize;display:inline;}
+    .simple_form div.boolean {text-transform:none;}
+    .simple_form button {position:relative;}
+    .simple_form label.collection_radio {margin-right: 10px;vertical-align:-2px; margin-left:2px; display:table-row;text-align:left;float:none;width:0;}
+    .error_notification {padding: 4px 30px 4px 30px;background: url(/images/exclamation.png) 8px 5px no-repeat #FCC;border: solid 2px #C66;}
+    .simple_form .error {clear:left;color: #ff3333;display:block;margin-left:33%;font-size:10px;padding-left:20px;font-style:italic;font-weight:bold;text-transform:capitalize;}
+    .simple_form .hint {clear: left;margin-left: 33%;padding-left:20px;color: #555;display: block;font-style: italic;}
+    input.radio { vertical-align: -3px; }
+    input.check_boxes { margin-left: 3px; vertical-align: -3px;}
+    label.collection_check_boxes { margin: 0; vertical-align: -2px; margin-left:2px;}
+    input.required, input.optional, textarea.optional, textarea.required, {display:block;}
+    input.required, textarea.required, .select_required {border: 2px solid #8b0000; background-color:#ffffcc;font-size:inherit;}
+    .select_required {padding:0.4em;}
 
 
 /*Form Tab CSS Styling*/
-.tabcontainer {background-color: #edf2f6;}
-.tabcontent {border: 1px solid #999999; display: none;overflow:hidden;padding:10px 10px 10px 10px}
-.basictab ul { margin: 0; padding: 7px 0 5px; font-weight: bold; list-style-type: none; text-align: left; /*set to left, center, or right to align the menu as desired*/}
+.tabcontainer {background-color:#fffefe;border-radius:0 0 10px 10px;border:none}
+.tabcontent {display: none;overflow:hidden;padding:10px 10px 10px 10px}
+.basictab {background-color:#bfbebe;border-radius:10px 10px 0 0}
+.basictab ul { margin: 0; padding: 13px 0 5px 4px; font-weight: bold; list-style-type: none; text-align: left;}
 .basictab ul li{position: relative; display: inline;}
-.basictab li a {text-decoration: none;padding: 6px;border-bottom: none;background-color: #4B7399; color: #ffffff; border-left: 1px solid #999999; border-right: 1px solid #999999; border-top: 1px solid #999999; border-bottom: #edf2f6;}
+.basictab li a {border-radius:7px 7px 0 0; }
+.basictab li a {text-decoration: none;padding: 6px;border-bottom: none;background-color: #4B7399; color: #ffffff; }
 .basictab li a:visited {}
-.basictab li a:hover, .basictab li a.current { background-color: #edf2f6; color: black;}
+.basictab li a:hover, .basictab li a.current { background-color:#fffefe; color: black;}
 .basictab li a:active {color: black;}
 
 
@@ -178,7 +181,7 @@ legend, #IE8#HACK {margin-top:0;margin-bottom:0;}
 
 
 /*Footer Styling*/
-#footer { width:100%; float:left; text-align: center; padding: 4px 0;color:#b5b2b2;}
+#footer {width:100%; float:left; text-align: center; padding: 4px 0;color:#b5b2b2;}
 #footer a {color:#b5b2b2;font-size:x-small;}
 
 /* ARE THESE USED ???????*/
