CSS and layout updates. More to come.....

--- a/app/views/layouts/_left_sidebar_modules.erb
+++ b/app/views/layouts/_left_sidebar_modules.erb
@@ -4,9 +4,9 @@
   <div class="module">
 
    <%= simple_form_for(@user_session, :url => {:action => "create" }) do |f| %>
-    <%= f.error_notification %>
-      <%= f.input :username, :placeholder => 'Username', :input_html => {:size => 28 } %>
-      <%= f.input :password, :placeholder => 'Password', :input_html => {:size => 28 } %>
+      <%= f.error_notification %>
+      <%= f.input :username, :placeholder => 'Username',:error => false, :input_html => {:size => 28 } %>
+      <%= f.input :password, :placeholder => 'Password',:error => false, :input_html => {:size => 28 } %>
       <div class="center">
         <%= f.submit t 'global.login'  %>
       </div>
