--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title><%= Setting::business_name %>-<%= @title || "" %></title>
   <meta name="keywords" content="<%= Setting::meta_tags %>"/>
-  <%= stylesheet_link_tag 'application', 'jquery-ui-1.8.11.custom', 'ckeditor' %>
+  <%= stylesheet_link_tag 'application', 'jquery-ui-1.8.11.custom' %>
   <%= javascript_include_tag 'application', 'jquery-1.5.1.min', 'jquery-ui-1.8.2.custom.min', 'jquery.effects.core.min','jquery.effects.slide.min', 'rails', 'autocomplete-rails', 'ckeditor/ckeditor' %>
   <%= csrf_meta_tag %>
   <script type="text/javascript">
@@ -37,30 +37,27 @@ $(function() {
   </script>
 </head>
 <body>
+<% if logged_in?  %>
 <div id="menu">
   <%= render_navigation(:expand_all => true) %>
 
- <% if logged_in?  %>
+
     <div id="user_info_menu">
         <%= t "global.welcome_back" %>&nbsp;<a href="<%= my_account_path(:id=> current_user)%>"><%= current_user.name %></a>
     </div>
-  <% end %>
   </div>
+  <% end %>
 <div style="clear:both;float:none;"></div>
 <div id="container">
   <div id="yield">
-<%- flash.each do |name, msg| -%>
+    <div id="page_title" class="text_shadow">
+      <% if logged_in?  %><h1><%= @title || "" %></h1><% end %>
+    </div>
+          <%- flash.each do |name, msg| -%>
         <p>
           <%= content_tag :div, msg, :id => "flash_#{name}" %>
         </p>
     <%- end -%>
-
-    <div id="page_title" class="text_shadow">
-      <% if logged_in?  %><h1><%= @title || "" %></h1>
-      <% else %>
-      &nbsp;
-      <% end %>
-    </div>
 
     <%= yield %>
   </div>
