--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,18 +1,21 @@
 <% if logged_in? %>
     <% if can? :manage, @users %>
         <div id="sidebar_left">
-          <%= render 'layouts/left_sidebar_modules' %>
-          <ul>
-            <li class="create">
-               <%= link_to([t "global.new"], new_user_path) %>
-            </li>
-          </ul>
+          <%= module_header %>
+          <div class="module">
+           <ul>
+            <li class="create"><%= link_to([t "global.new"], new_user_path) %></li>
+            <li class="back"><%= link_to([t "global.back"], :back) %></li>
+           </ul>
+          </div>
+        <%= render 'layouts/left_sidebar_modules' %>
         </div>
     <% end %>
 
-     <% if current_user.employee? && current_user.employee = true  %>
-        <div class="centered">
 
+     <% if current_user.employee? && current_user.employee = true  %>
+        <div id="center_col" class="no_right_sidebar content">
+                   <br/>
                    <%= form_tag users_path, :method => 'get' do %>
                       <p><%= t "user.search" %>
                         <%= text_field_tag :name, params[:name] %>&nbsp;
