--- a/app/views/work_orders/edit.html.erb
+++ b/app/views/work_orders/edit.html.erb
@@ -1,8 +1,14 @@
-<div id="top_float_left">
-  <%= link_to(image_tag('exit.png', :title => [t "global.cancel"], :align => "bottom", :hspace => "2"), work_orders_path) %>&nbsp;&nbsp;<%= link_to([t "global.cancel"], work_orders_path) %>&nbsp;&nbsp;<%= link_to(image_tag('tick.png', :title => [t "global.close"], :align => "bottom", :hspace => "2"), close_path, :confirm => 'Are you sure?', :method => :put) %>&nbsp;<%= link_to([t "global.close"], close_path, :confirm => (t "workorder.message_close_confirmation"), :method => :put) %>
-</div>
-<br>
-<div id="ddtabs1" class="basictab">
+<div id="sidebar_left">
+  <%= module_header %>
+  <div class="module">
+    <ul>
+      <li class="exit"><%= link_to([t "global.cancel"], work_orders_path) %></li>
+      <li class="close"><%= link_to([t "global.close"], close_path, :confirm => (t "workorder.message_close_confirmation"), :method => :put) %></li>
+    </ul>
+  </div>
+ </div>
+<div id="center_col" class="no_right_sidebar">
+  <div id="ddtabs1" class="basictab">
   <ul>
     <li><a href="#<%= t "workorder.tab_menu_basic_name" %>" rel="tab1"><%= (t "workorder.tab_menu_basic") %></a></li>
     <li><a href="#<%= t "workorder.tab_menu_resolution" %>" rel="tab2"><%= (t "workorder.tab_menu_resolution") %></a>
@@ -25,12 +31,14 @@
             <%= f.association :priority_list, :label => (t "workorder.priority"), :include_blank => false %>
             <%= f.input :assigned_to_username, :as => :select, :collection => User.where("workorder_assignability = ?", true), :value_method => :name, :disabled => true %>
         <% end %>
-        <div class="simple_form label">
-          <label><%= t "workorder.details" %></label>
+
+        <div class="simple_form input select optional">
+          <label class="simple_form select optional"><%= t "workorder.details" %></label>
+
+           <%= ckeditor_tag 'work_order[description]', @work_order.description, :class => 'ckeditor' %>
+
         </div>
-        <div class="span-670">
-          <%= ckeditor_tag 'work_order[description]', @work_order.description, :class => 'ckeditor' %>
-        </div>
+
         <%= f.input :updated_at, :as => :hidden, :input_html => {:value => Time.now} %>
         <%= f.input :edited_by, :as => :hidden, :input_html => {:value => current_user.username} %>
         <div class="clear"></div>
@@ -58,3 +66,5 @@
     <% end %>
   </div>
 </div>
+</div>
+
