--- a/app/views/work_orders/index.html.erb
+++ b/app/views/work_orders/index.html.erb
@@ -13,7 +13,7 @@
   <%= render 'layouts/left_sidebar_modules' %>
 </div>
 
-<div id="center_col">
+<div id="center_col" class="no_right_sidebar">
   <div id="ddtabs1" class="basictab">
     <ul>
       <li><a href="#new" rel="tab1"><%= t "workorder.tab_menu_new" %>&nbsp;(<% if @new_work_orders.count > 0 %><span style="color:red;"><%= @new_work_orders.count %></span><% else %><%= @new_work_orders.count %><% end %>)</a></li>
