--- a/app/views/work_orders/new.html.erb
+++ b/app/views/work_orders/new.html.erb
@@ -1,12 +1,17 @@
 <!--mytodo - heaps to fix up here....add tabs and all fields required.-->
-<div class="sidebar_left">
-  <%= render 'layouts/quick_links_sidebar' %>
-  <ul>
-    <li class="exit"><%= link_to (t "global.exit"), work_orders_path %></li>
-    <li class="back"><%= link_to (t "global.back"), :back %></li>
-      </ul>
+
+<div id="sidebar_left">
+     <%= module_header %>
+        <div class="module">
+          <ul>
+            <li class="exit"><%= link_to (t "global.exit"), work_orders_path %></li>
+            <li class="back"><%= link_to (t "global.back"), :back %></li>
+          </ul>
+        </div>
+     <%= render 'layouts/left_sidebar_modules' %>
 </div>
-<div class="center_col">
+
+<div id="center_col" class="no_right_sidebar">
   <div id="ddtabs1" class="basictab">
     <ul>
       <li><a href="#<%= t "workorder.tab_menu_basic_name" %>" rel="sc1"><%= (t "workorder.tab_menu_basic") %></a></li>
@@ -18,18 +23,25 @@
       <%= simple_form_for(@work_order) do |f| %>
           <%= f.error_notification %>
           <% if current_user.employee == true %>
+              <% if params[:client_id].present?  %>
               <%= f.input :user_id, :as => :hidden, :input_html => { :value => params[:client_id] } %>
+              <% else %>
+                  <div>
+                    <label>Test</label>
+              <%= f.collection_select(:user_id, User.where("client = ?",true),:id, :name, :include_blank => true)%>
+                  </div>
+
+                  <% end %>
           <% end %>
           <%= f.input :subject, :label => (t "workorder.subject"), :input_html => { :size => 60 } %>
           <%= f.association :priority_list, :label => (t "workorder.priority"), :include_blank => false %>
 
 
-          <div class="label select required">
-            <%= (t "workorder.details") %>
-          </div>
-          <div class="simple_form input textarea">
-            <%= ckeditor_tag 'work_order[description]', @work_order.description, :class => 'simple_form textarea ckeditor' %>
-          </div>
+
+
+            <label><%= (t "workorder.details") %></label>
+            <%= ckeditor_tag 'work_order[description]', @work_order.description, :class => 'ckeditor' %>
+
           <%= f.input :edited_by, :as => :hidden, :input_html => { :value => current_user.username } %>
           <%= f.input :created_by, :as => :hidden, :input_html => { :value => current_user.username } %>
           <%= f.input :updated_at, :as => :hidden, :input_html => { :value => Time.now } %>
@@ -38,10 +50,7 @@
           <div class="center">
             <%= f.submit %>
           </div>
-
       <% end %>
     </div>
   </div>
-
-
 </div>
